--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.3.0",
+    "axios": "^0.24.0",
     "moment": "^2.29.1",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "react-toastify": "^8.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
